# diy

./: .build.yml  .doctr-files  .gitattributes  .gitignore  .gitlab-ci-spack.yml  .gitlab-ci.yml  .hgignore  .hgsubtree  .travis.yml  404.html  CHANGELOG.md  CMakeLists.txt  CTestConfig.cmake  Doxyfile  ISSUES.md  README.kitware.md  README.md  algorithms_8hpp_source.html  all-reduce_8hpp_source.html  all-to-all_8hpp_source.html  annotated.html  assigner_8hpp_source.html  block_8hpp_source.html  block__traits_8hpp_source.html  bov_8hpp_source.html  broadcast_8hpp_source.html  chrono_8h_source.html  classarg__formatter-members.html  classarg__formatter.html  classbasic__cstring__view-members.html  classbasic__cstring__view.html  classbasic__format__arg-members.html  classbasic__format__arg.html  classbasic__format__arg_1_1handle-members.html  classbasic__format__arg_1_1handle.html  classbasic__format__args-members.html  classbasic__format__args.html  classbasic__format__context-members.html  classbasic__format__context.html  classbasic__memory__buffer-members.html  (+869 more)
.github/workflows/: close-pull-request.yml
.gitlab/: artifacts.yml  os-linux.yml  os-windows.yml  rules.yml
.gitlab/ci/: ccache.cmake  cmake.ps1  cmake.sh  configure_common.cmake  configure_fedora33_mpich.cmake  configure_fedora33_openmpi.cmake  configure_fedora34.cmake  configure_fedora34_asan.cmake  configure_fedora34_mpich.cmake  configure_fedora34_mpich_nothreads.cmake  configure_fedora34_openmpi.cmake  configure_fedora34_ubsan.cmake  (+20 more)
algorithms/: index.html
async_comm/: index.html
bindings/python/: CMakeLists.txt  README.md
bindings/python/diy/: __init__.py  _version.py
bindings/python/examples/: CMakeLists.txt  exchange.py  iexchange.py  io-example.py  mpi.py  myblock.py  pickle-example.py  reduce.py
bindings/python/ext/pybind11/include/pybind11/: numpy.h
bindings/python/ext/pybind11/tests/: requirements.txt
bindings/python/src/: assigner.cpp  decomposer.cpp  diy.cpp  io.cpp  link.cpp  master.cpp  mpi.cpp  myblock.cpp  partners.cpp  partners.h  proxy.cpp  reducer.cpp  serialization.cpp  serialization.h  types.cpp
callbacks/: index.html
cmake/: DIYCompilerFlags.cmake  diy-config.cmake.in
coroutine/: index.html
decomposition/: index.html
doc/: build.py
docs/: .doctr-files  algorithms_8hpp_source.html  all-reduce_8hpp_source.html  all-to-all_8hpp_source.html  annotated.html  assigner_8hpp_source.html  block_8hpp_source.html  block__traits_8hpp_source.html  bov_8hpp_source.html  broadcast_8hpp_source.html  classdiy_1_1_assigner-members.html  classdiy_1_1_assigner.html  classdiy_1_1_collection-members.html  classdiy_1_1_collection.html  classdiy_1_1_contiguous_assigner-members.html  classdiy_1_1_contiguous_assigner.html  classdiy_1_1_external_storage-members.html  classdiy_1_1_external_storage.html  classdiy_1_1_file_storage-members.html  classdiy_1_1_file_storage.html  classdiy_1_1_link-members.html  classdiy_1_1_link.html  classdiy_1_1_master-members.html  classdiy_1_1_master.html  classdiy_1_1_point-members.html  classdiy_1_1_point.html  classdiy_1_1_regular_link-members.html  classdiy_1_1_regular_link.html  classdiy_1_1_round_robin_assigner-members.html  classdiy_1_1_round_robin_assigner.html  classdiy_1_1critical__resource-members.html  classdiy_1_1critical__resource.html  classdiy_1_1io_1_1_b_o_v-members.html  classdiy_1_1io_1_1_b_o_v.html  classdiy_1_1io_1_1_num_py-members.html  classdiy_1_1io_1_1_num_py.html  classdiy_1_1mpi_1_1communicator-members.html  classdiy_1_1mpi_1_1communicator.html  classdiy_1_1mpi_1_1io_1_1file-members.html  classdiy_1_1mpi_1_1io_1_1file.html  (+379 more)
examples/: CMakeLists.txt  index.html  opts.h
examples/amr/: README.txt  fab-block.h  nyx-amrex-henson.cpp
examples/coroutine/: CMakeLists.txt  coroutine.cpp
examples/decomposition/: CMakeLists.txt  regular-decomposer-long.cpp  regular-decomposer-short.cpp  test-decomposition.cpp  test-direct-master.cpp
examples/io/: CMakeLists.txt  test-io.cpp  test.npy
examples/load_balancing/: CMakeLists.txt  collective.cpp  common.hpp  dynamic.cpp  none.cpp  sampling.cpp
examples/mpi/: CMakeLists.txt  test-mpi.cpp
examples/reduce/: CMakeLists.txt  all-done.cpp  all-to-all.cpp  kd-tree.cpp  merge-reduce.cpp  point.h  sample-sort.cpp  sort.cpp  sort.h  swap-reduce.cpp
examples/serialization/: CMakeLists.txt  test-serialization.cpp
examples/simple/: CMakeLists.txt  block.h  iexchange-particles.cpp  iexchange.cpp  intercomm.cpp  read-blocks.cpp  rexchange.cpp  simple.cpp  until-done.cpp  until_done.cpp
examples/smoke_test/: CMakeLists.txt  block.h  smoke_test.cxx
examples/swap-reduce/: CMakeLists.txt  swap-reduce.cpp
initialization/: index.html
io/: index.html
load_balancing/: index.html
local_comm/: index.html
mpi/: index.html
ooc/: index.html
reduce_comm/: index.html
remote_comm/: index.html
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  (+43 more)
serialization/: index.html
src/: tinythread.cpp
tests/: CMakeLists.txt  balance.hpp  blobs.cpp  catch.hpp  collective-balance.cpp  custom-bounds-load.cpp  custom-bounds.cpp  decomposer.cpp  double-foreach.cpp  dynamic-assigner.cpp  dynamic-balance.cpp  grid.cpp  iexchange.cpp  io.cpp  kd-tree-dataset.csv  kd-tree-dense-points.cpp  kd-tree.cpp  link.cpp  merge-swap-reduce.cpp  mpi-collectives.cpp  mpi-type-conversions.cpp  mpi-window.cpp  partners.cpp  rexchange.cpp  sampling-balance.cpp  serialization.cpp  shared-output.cpp  simple.cpp  swap-reduce.cpp  two-masters.cpp
tests/backward/: CMakeLists.txt  backward.hpp
tests/scripts/: kd-tree.sh  merge-swap-reduce.sh  simple.sh  swap-reduce.sh
threads/: index.html
(+172 files in other folders)
